--- a/whatsapp/package.json
+++ b/whatsapp/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "appwrite": "^9.0.1",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "@vitejs/plugin-vue": "^3.0.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
