--- a/part-3/package.json
+++ b/part-3/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.8",
     "appwrite": "^9.0.1",
+    "pinia": "^2.0.21",
     "vue": "^3.2.37",
     "vue-router": "^4.1.4"
   },
