--- a/part-11/appwrite.json
+++ b/part-11/appwrite.json
@@ -112,6 +112,69 @@
                     ]
                 }
             ]
+        },
+        {
+            "$id": "messages",
+            "$createdAt": "2022-10-06T20:48:01.894+00:00",
+            "$updatedAt": "2022-10-06T21:59:23.772+00:00",
+            "$permissions": [
+                "create(\"any\")"
+            ],
+            "databaseId": "whatsapp",
+            "name": "messages",
+            "enabled": true,
+            "documentSecurity": true,
+            "attributes": [
+                {
+                    "key": "contents",
+                    "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "size": 65000,
+                    "default": null
+                },
+                {
+                    "key": "group_id",
+                    "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                },
+                {
+                    "key": "user_id",
+                    "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "size": 255,
+                    "default": null
+                },
+                {
+                    "key": "email",
+                    "type": "string",
+                    "status": "available",
+                    "required": true,
+                    "array": false,
+                    "format": "email",
+                    "default": null
+                }
+            ],
+            "indexes": [
+                {
+                    "key": "group",
+                    "type": "key",
+                    "status": "available",
+                    "attributes": [
+                        "group_id"
+                    ],
+                    "orders": [
+                        "ASC"
+                    ]
+                }
+            ]
         }
     ]
 }
